Fix overflowing bio animation/interactivity
* update open/close and move the read more button
* update javascript tests so they work

--- a/app/assets/stylesheets/gto/artists/_artists.scss
+++ b/app/assets/stylesheets/gto/artists/_artists.scss
@@ -127,16 +127,18 @@
     font-size: 0.9rem;
     margin-bottom: 20px;
     &.artist__bio {
+      @include transition(max-height 0.3s ease-in-out);
       position:relative;
       max-height: 200px;
       overflow:hidden;
-      &.overflowing .read-more {
+      &.overflowing + .artist__bio-read-more {
         @include opacity(1);
       }
       &.overflowing.open {
-        max-height: 100%;
+        max-height: 1200px;
+        overflow-y: auto;
       }
-      &.open .read-more {
+      &.open + .artist__bio-read-more {
         .fa {
           @include transform(rotate(180deg));
         }
